# bestiario-restaurant-monorepo

./: .gitignore  docker-compose.dev.yaml
api/: .dockerignore  README.md  docker-compose.yaml  dockerfile  dockerfile.dev  main.py  makefile  pyproject.toml  requirements.txt
api/app/: __init__.py  custom_errors.py  decorators.py  error_handler.py  response_versions.py
api/app/controllers/: __init__.py  base_controller.py
api/app/infra/: __init__.py  loggin.py  middleware.py  request_context.py
api/app/models/: __init__.py  base_models.py  sessions.py  system.py  users.py
api/app/routes/: __init__.py  base_route.py
api/app/schemas/: __init__.py  enums.py  order_schema.py  product_schema.py  session_schema.py  user_schema.py
api/app/sockets/: __init__.py  print_ticket.py
api/app/utils/: __init__.py  datetime_utils.py
api/migrations/versions/: 08416a450110_add_user_to_ticket.py  0e393e09eff0_add_ticket_number_to_ticket.py  40b3db75e496_add_menu_section_to_product.py  60b63fb5db52_change_to_user_and_session_models_to_.py  78741fb2cc00_add_print_for_pay_to_tickets_and_.py  826728db1b8a_change_product_addons_to_not_be_in_.py  99ae8e1feb10_change_product_addons_relations_with_.py  b266b564c30c_add_total_to_order_and_ticket_models.py  c7f5c90af23b_change_menu_section_to_category.py  e44a7bd3d935_add_client_name_column_to_ticket.py  ebaa67f7e95e_add_display_name_column_to_user.py  ec793d211468_snapshots_of_prices.py  f47bc7c93571_added_is_paid_column_to_ticket.py  (+3 more)
printer-app/: pyproject.toml
printer-app/app/: __init__.py  app.py  config.py
(+108 files in other folders)
