[project]
name = "api-bestiario-restaurant"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eventlet>=0.40.4",
    "flask>=3.1.1",
    "flask-bcrypt>=1.0.1",
    "flask-cors>=6.0.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-order>=1.3.0",
]
